# JackHammer

./: CMakeLists.txt  JackHammer.cpp  JackHammer.service  LICENSE  filter.cpp  filter.h  journalwatcher.cpp  journalwatcher.h  nftablesinterface.cpp  nftablesinterface.h  regexes.json
